<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_board" />

        <TextView
            android:id="@+id/textToChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_15_squares_puzzle" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnCount="4"
            app:rowCount="4">

            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1" />

            <Button
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2" />

            <Button
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3" />

            <Button
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4" />

            <Button
                android:id="@+id/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5" />

            <Button
                android:id="@+id/b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6" />

            <Button
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7" />

            <Button
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8" />

            <Button
                android:id="@+id/b9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9" />

            <Button
                android:id="@+id/b10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10" />

            <Button
                android:id="@+id/b11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11" />

            <Button
                android:id="@+id/b12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12" />

            <Button
                android:id="@+id/b13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13" />

            <Button
                android:id="@+id/b14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14" />

            <Button
                android:id="@+id/b15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15" />

            <Button
                android:id="@+id/bEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />
        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>